...

    
    ///Setup the remote chat button and add it on the view
    func remoteChatButtonSetup() {
        view.addSubview(remoteChatButton)
        remoteChatButton.translatesAutoresizingMaskIntoConstraints = false
        remoteChatButton.setImage(#imageLiteral(resourceName: "chatIcon"), for: .normal)
        remoteChatButton.widthAnchor.constraint(equalToConstant: 30).isActive = true
        remoteChatButton.heightAnchor.constraint(equalToConstant: 30).isActive = true
        remoteChatButton.imageView?.contentMode = .scaleAspectFit
        remoteChatButton.leadingAnchor.constraint(equalTo: view.leadingAnchor, constant: 20).isActive = true
        remoteChatButton.topAnchor.constraint(equalTo: view.safeAreaLayoutGuide.topAnchor, constant: 10).isActive = true
        //remoteChatButton.setTitle("Chat", for: .normal)
...

    ///Setup live button, Presentes SpeechToTextVC VC
    func liveButtonSetup() {
        view.addSubview(liveButton)
        liveButton.translatesAutoresizingMaskIntoConstraints = false
        //liveButton.setTitle("Live", for: .normal)
        liveButton.setImage(#imageLiteral(resourceName: "yo"), for: .normal)
        liveButton.imageView?.contentMode = .scaleAspectFit
        liveButton.heightAnchor.constraint(equalToConstant: 40).isActive = true
        liveButton.widthAnchor.constraint(equalToConstant: 40).isActive = true
        liveButton.centerXAnchor.constraint(equalTo: view.centerXAnchor).isActive = true
        liveButton.topAnchor.constraint(equalTo: view.safeAreaLayoutGuide.topAnchor, constant: 10).isActive = true
        liveButton.addTarget(self, action: #selector(liveButtonTapped), for: .touchUpInside)
...
        view.addSubview(notesButton)
        notesButton.translatesAutoresizingMaskIntoConstraints = false
        notesButton.trailingAnchor.constraint(equalTo: view.trailingAnchor, constant: -20).isActive = true
        notesButton.topAnchor.constraint(equalTo: view.safeAreaLayoutGuide.topAnchor, constant: 10).isActive = true
        notesButton.widthAnchor.constraint(equalToConstant: 30).isActive = true
        notesButton.heightAnchor.constraint(equalToConstant: 30).isActive = true
        notesButton.setImage(#imageLiteral(resourceName: "notesIcon"), for: .normal)
        //notesButton.setTitle("Notes", for: .normal)
        notesButton.addTarget(self, action: #selector(notesButtonTapped), for: .touchUpInside)

        notesButton.imageView?.contentMode = .scaleAspectFit
    }

...

    // MARK: Control View
    ///Setup position/size/style of the speak button holder and add it on screen
    func speakerButtonSetup() {

        speakerButton.backgroundColor = .systemOrange
        speakerButton.setTitle("Speak", for: .normal)
        speakerButton.setTitle("Mute", for: .selected)
        speakerButton.addTarget(self, action: #selector(speakerButtonTapped), for: .touchUpInside)
    }

    ///Action invoked when speaker button tapped. Asks audio engine to play the speech generated from text
    @objc func speakerButtonTapped() {
        if speakerButton.isSelected {
...
    }

    ///Setup position/size/style of the keyboard button and add it on screen
    func keyboardButtonSetup() {

        keyboardButton.backgroundColor = .systemOrange
        keyboardButton.setTitle("Keyboard", for: .normal)
        keyboardButton.isSelected = true
        keyboardButton.addTarget(self, action: #selector(keyboardButtonTapped), for: .touchUpInside)
    }

    ///Action for when keyboard button is tapped, raises the view, activates output text view to edit and present the keyboard.
    @objc func keyboardButtonTapped() {
        textViewHolder.bottomAnchor.constraint(equalTo: view.bottomAnchor).isActive = true

        if keyboardButton.isSelected {
            keyboardButton.isSelected = false
            print("switched to keyboard mode")
            keyboardButton.setTitle("ASL", for: .normal)
            outputTextView.isEditable = true
            outputTextView.becomeFirstResponder()
            outputTextView.backgroundColor = .white
            UIView.animate(withDuration: 0.2) {
                self.controlButton.isHidden = true
                self.keyboardButton.layer.maskedCorners = [.layerMinXMinYCorner, .layerMinXMaxYCorner]
...
        controlView.isUserInteractionEnabled = true
    }

    ///Setup position/size/style of the control button and add it on screen
    func controlButtonSetup() {
        controlButton.backgroundColor = .systemBlue
        controlButton.setTitle("More", for: .normal)
        controlButton.setTitle("Close Dashboard", for: .selected)
        controlButton.layer.maskedCorners = [.layerMinXMinYCorner, .layerMinXMaxYCorner]
        controlButton.layer.cornerRadius = 10
        controlButton.clipsToBounds = true
        controlButton.addTarget(self, action: #selector(controlButtonTapped(_:)), for: .touchUpInside)
    }

...

        logOutButton.translatesAutoresizingMaskIntoConstraints = false
        logOutButton.topAnchor.constraint(equalTo: trainButton.bottomAnchor, constant: 20).isActive = true
        logOutButton.leadingAnchor.constraint(equalTo: controlView.leadingAnchor, constant: view.frame.size.width/2).isActive = true
        logOutButton.trailingAnchor.constraint(equalTo: controlView.trailingAnchor, constant: -10).isActive = true
        logOutButton.heightAnchor.constraint(equalToConstant: 50).isActive = true
        logOutButton.setTitle("Log out", for: .normal)
        logOutButton.backgroundColor = .systemRed
        logOutButton.layer.maskedCorners = [.layerMaxXMaxYCorner, .layerMaxXMinYCorner]
        logOutButton.layer.cornerRadius = 10
        logOutButton.addTarget(self, action: #selector(handleLogout), for: .touchUpInside)

        if userIsLoggedOut() {
...
