...
//            recognitionRequest?.endAudio()
//            liveButton.isEnabled = false
//            liveButton.setTitle("Stopping", for: .disabled)
//        } else {
//            do {
//                try startRecording()
//                liveButton.setTitle("Stop Recording", for: [])
//            } catch {
//                liveButton.setTitle("Recording Not Available", for: [])
//            }
//        }
//    }

...
